THRIFT-3759 required fields that are nil are silently ignored on write Client: Delphi Patch: Jens Geyer